--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     buildToolsVersion '28.0.3'
     defaultConfig {
         minSdkVersion 19
+        targetSdkVersion 28
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         flavorDimensions "version"
         multiDexEnabled true
@@ -98,7 +99,7 @@ android {
         pwb {
             applicationId "cenergy.central.com.eordering.pwb"
             manifestPlaceholders = [applicationLabel: "@string/app_name"]
-            versionCode 75
+            versionCode 76
             versionName "1.0.11"
         }
 
