--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            debuggable false // Set false when singed new apk
+            debuggable true // Set false when singed new apk
             jniDebuggable false
             renderscriptDebuggable false
             renderscriptOptimLevel 3
@@ -166,8 +166,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.6.0'
     implementation 'com.robinhood.ticker:ticker:1.1.1'
     implementation 'joda-time:joda-time:2.9.4'
-    implementation 'com.amazonaws:aws-android-sdk-core:2.6.13'
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.7'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.16.1'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.16.1'
     //implementation 'uk.co.lucasweb:aws-v4-signer-java:1.3'
     kapt 'com.jakewharton:butterknife-compiler:8.6.0'
     testImplementation 'junit:junit:4.12'
