--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,6 +127,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 def supportLibraryVersion = '28.0.0'
