--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
     repositories {
+        google()
+        mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.28.0'
+        classpath 'io.fabric.tools:gradle:1.31.2'
     }
 }
 apply plugin: 'com.android.application'
@@ -145,6 +147,10 @@ dependencies {
 
     /* Firebase */
     implementation 'com.google.firebase:firebase-config:19.0.3'
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+
+    // The Firebase Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     /* Glide */
     implementation 'com.github.bumptech.glide:glide:3.8.0'
@@ -177,18 +183,8 @@ dependencies {
 
     //date picker
     implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
-    
-    // fabric
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
-        transitive = true
-    }
 
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 apply plugin: 'com.google.gms.google-services'
-
-repositories {
-    mavenCentral()
-    maven { url 'https://maven.fabric.io/public' }
-}
