--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            debuggable false // Set false when singed new apk
+            debuggable true // Set false when singed new apk
             jniDebuggable false
             renderscriptDebuggable false
             renderscriptOptimLevel 3
@@ -108,15 +108,15 @@ android {
         cds {
             applicationId "cenergy.central.com.eordering.cds"
             manifestPlaceholders = [applicationLabel: "@string/app_name"]
-            versionCode 93
-            versionName "1.1.4"
+            versionCode 109
+            versionName "1.1.9"
         }
 
         rbs {
             applicationId "cenergy.central.com.eordering.rbs"
             manifestPlaceholders = [applicationLabel: "@string/app_name"]
-            versionCode 93
-            versionName "1.1.4"
+            versionCode 109
+            versionName "1.1.9"
         }
     }
 
@@ -146,9 +146,9 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
     /* Firebase */
-    implementation 'com.google.firebase:firebase-config:19.1.1'
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    implementation 'com.google.firebase:firebase-firestore:21.4.0'
+    implementation 'com.google.firebase:firebase-config:19.1.4'
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
+    implementation 'com.google.firebase:firebase-firestore:21.4.3'
 
     // The Firebase Crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
