--- a/app/build.gradle
+++ b/app/build.gradle
@@ -186,6 +186,8 @@ dependencies {
     }
     // Rating
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
+    // Zooming
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
 
     testImplementation 'junit:junit:4.12'
