--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,19 +185,19 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-core:2.16.1'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.16.1'
 
-    //date picker
+    // Date picker
     implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
 
-    // fabric
+    // Fabric
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
         transitive = true
     }
+
     // Rating
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
 
-    // Zooming
+    // Image - Zooming
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-
 
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
