--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            debuggable false // Set false when singed new apk
+            debuggable true // Set false when singed new apk
             jniDebuggable false
             renderscriptDebuggable false
             renderscriptOptimLevel 3
@@ -90,7 +90,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            debuggable false
+            debuggable true
             jniDebuggable false
             renderscriptDebuggable false
             renderscriptOptimLevel 3
