--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,6 +137,10 @@ android {
     }
 }
 
+ext {
+    chuckerVersion = "3.3.0"
+}
+
 dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -161,6 +165,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.7'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    /* chucker */
+    implementation "com.github.ChuckerTeam.Chucker:library:$chuckerVersion"
+    releaseImplementation "com.github.ChuckerTeam.Chucker:library-no-op:$chuckerVersion"
 
     /* Gson */
     implementation 'com.google.code.gson:gson:2.8.6'
